# ddzz

./: .gitmodules
c++/branchless/: README.md  branch_predictor_profiler.hpp  case1_hex.hpp  case2_filter_positive.hpp  case3_unrolled_sum.hpp  case4_compare_date.hpp  case5_clamp.hpp  case6_abs.hpp  case7_mask_select.hpp  case8_sentinel_search.hpp  case9_bit_scan.hpp  test_branchless.cpp  test_papi.cpp  test_pmu.cpp
c++/branchless_memory_layout/: README.md  run_all.sh
c++/fuzz/: README.md  simple.cpp
c++/lru_impl/: CMakeLists.txt  DESIGN.md
c++/lru_impl/include/: cache_entry.h  lru_cache.h  lru_node.h  multi_cache.h
c++/lru_impl/test/: test_cache.cpp
docs/: performance_optimization.md  secure_binary_build_checklist.md
drawio/: char_or_string.drawio  decay.drawio  fma.drawio  friend.drawio  functional.drawio  memory_pool.drawio  must_template.drawio  pointer.drawio  realloc.drawio  round.drawio  simd_datatype.drawio  sizeof_strlen.drawio
hft/spinlock/: main.cpp
llm/attn/: multi-head-attn.py  readme.md  self-head-attn.py
llm/attn-kv/: kv-cache-help.md  multi-head-attn-kv.py  readme.md  single-head-attn-kv.py
llm/pa/: README.md
llm/s-dq/: README.md  sdq_standalone.cpp  sdq_torch.py
simd/exp10_dynamic_and_cache/: kernel_cache.hpp  test_softmax.cpp
simd/exp11_brgemm/: README.md  brgemm_kernel.cpp  brgemm_kernel.hpp  test_brgemm.cpp
simd/exp12_xbyak_lookup_table/: embedded_table_sample.cpp  static_table_sample.cpp  xbyak_table_design.md
simd/exp13_mlx_simd/: mini_mlx_simd_abs.cpp
tutorial/: papi-usage.md  papi-visualization-guide.md
(+85 files in other folders)
